tests/baselines/reference/i3.errors.txt
tests/cases/compiler/i3.ts(6,1): error TS2322: Type 'I3' is not assignable to type '{ one: number; }'.
  Property 'one' is optional in type 'I3' but required in type '{ one: number; }'.


==== tests/cases/compiler/i3.ts (1 errors) ====
    interface I3 { one?: number; }; 
    var x: {one: number};
    var i: I3;
    
    i = x;
    x = i;
    ~
!!! error TS2322: Type '{|I3|0|}' is not assignable to type '{ {|one|1|}: number; }'.
!!! error TS2322:   Property 'one' is optional in type 'I3' but required in type '{ one: number; }'.
!!! annotated symbol 0 tests/cases/compiler/i3.ts:1:11
!!! annotated symbol 1 tests/cases/compiler/i3.ts:2:9